overflow bug
overflow bug

--- a/TrainingTracker/StyleSheets/Profile.css
+++ b/TrainingTracker/StyleSheets/Profile.css
@@ -1297,7 +1297,3 @@ label.lbl-data-info {
     width:93%;
 }
 
-.code-review-header-description
-{
-    white-space:pre;
-}
